--- a/package.json
+++ b/package.json
@@ -3,8 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "scripts": {
-  },
+  "scripts": {},
   "repository": {
     "type": "git",
     "url": "git+https://github.com/anton-varenyuk/bcch-server.git"
@@ -14,5 +13,8 @@
   "bugs": {
     "url": "https://github.com/anton-varenyuk/bcch-server/issues"
   },
-  "homepage": "https://github.com/anton-varenyuk/bcch-server#readme"
+  "homepage": "https://github.com/anton-varenyuk/bcch-server#readme",
+  "devDependencies": {
+    "express": "^4.17.1"
+  }
 }
